# Kratos

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
cli/: main.py  orchestrator.py  output.py
cli/core/: context_manager.py  docker_controller.py  live_state.py  llm.py  logger.py  main_agent.py  prompts.py  react_loop.py  sub_agent.py
cli/web/: server.py
cli/web/static/: index.html
