[project]
name = "kratos"
version = "0.1.0"
description = "Kratos — autonomous pentest tool with Docker sub-agents and live terminal dashboard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.115.0",
    "langchain>=1.2.12",
    "langchain-core>=0.3.0",
    "langchain-groq>=1.1.2",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "pyte>=0.8.2",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
]

[project.scripts]
kratos = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]
